# loop-engine-agent-platform

./: .gitignore  .vpeetla-skills.json  README.md  pyproject.toml  render.yaml  self-improving-agents.html  vercel.json
.cursor/skills/governed-ai-stack/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
corpus/: agent-harness.md  loop-engineering.md  mcp-and-memory.md
demo/: architect-config.js  architect-panel.css  config.js  glassbox.js  index.html  styles.css  vercel.json
docs/: ADR-001-loop-harness-memory.md  ADR-002-repo-fix-auth-and-isolation.md  ADR-003-ephemeral-container-sandbox.md  ARCHITECTURE.md  DEPLOY.md  LOOPS.md  PRODUCT.md  REQUIREMENTS.md  RESEARCH.md  SLO.md
docs/diagrams/: canonical-architecture.mmd
loops/: support-intelligence.yaml
scripts/: github-setup.sh
src/loop_engine/: __init__.py  tracing.py
src/loop_engine/eval/: evaluator.py
src/loop_engine/graph/: __init__.py  build.py  nodes.py  repo_build.py  repo_nodes.py  routing.py  state.py
src/loop_engine/harness/: agent_harness.py
src/loop_engine/integrations/: aegis_gateway.py
src/loop_engine/loops/: evolve_loop.py  react_loop.py
src/loop_engine/mcp/: bridge.py
src/loop_engine/memory/: store.py
src/loop_engine/models/: llm.py
src/loop_engine/observability/: langfuse_export.py
src/loop_engine/rag/: retriever.py
tests/: conftest.py  test_aegis_gateway.py  test_api_auth.py  test_golden_eval_gate.py  test_graph.py  test_harness.py  test_production_strict_gateway.py  test_repo_fix.py  test_sandbox.py
(+6 files in other folders)
