[project]
name = "loop-engine"
version = "0.1.0"
description = "Self-improving agents — harness, loops, memory, MCP, and RAG tuning"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "backend"]
asyncio_mode = "auto"
